# proj

src/: .env  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
src/hello_api/: config.py  routes.py
